<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/app_clear" android:title="@string/app_clear"/>

    <item android:id="@+id/app_copy_obb" android:title="@string/app_copy_obb"/>

    <item android:id="@+id/app_logout_account" android:title="@string/app_logout_account"/>

    <item android:id="@+id/app_reset_guest" android:title="@string/reset_guest_bgmi"/>

    <item android:id="@+id/app_recover_guest" android:title="@string/recover_guest_bgmi"/>

    <item android:id="@+id/app_change_imei" android:title="@string/change_imei_bgmi"/>

    <item android:id="@+id/app_stop" android:title="@string/app_stop"/>

    <item android:id="@+id/app_remove" android:title="@string/app_remove"/>
    <item android:id="@+id/app_shortcut" android:title="@string/app_shortcut"/>
</menu>